correct left alignments in rows of the Options page

--- a/src/popup/scss/box.scss
+++ b/src/popup/scss/box.scss
@@ -501,3 +501,7 @@
         }
     }
 }
+
+.options-row {
+    padding: 15px 15px 0px 10px;
+}
